--- a/desafio/core/templates/base.html
+++ b/desafio/core/templates/base.html
@@ -28,9 +28,7 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
+            <li role="presentation" class="active"><a href="{% url 'index' %}">Home</a></li>
           </ul>
         </nav>
         <a href="{% url 'index' %}">
